...

  return (
    <SafeAreaView style={backgroundStyle}>
      <View style={styles.headerContainer}>
        <Image source={logo} style={styles.image} testID="header-logo" />
        <Text style={[styles.title, titleStyle]}>
          {currentScreen === SCREENS.HOME ? 'Song viewer' : t('settings')}
        </Text>
        <TouchableOpacity
          testID="header-settings-button"
          onPress={() => {
            navigation.navigate(
              currentScreen === SCREENS.HOME ? SCREENS.SETTINGS : SCREENS.HOME
            );
          }}
        >
...
