const translation = {
  choose_file: 'Choose file',
  settings: 'Settings',
  light_mode: 'Light mode',
  dark_mode: 'Dark mode',
};

export default translation;
