...
  return (
    <SafeAreaView style={backgroundStyle}>
      <ScrollView stickyHeaderIndices={[0]}>
        <Header currentScreen={SCREENS.HOME} navigation={navigation} />
        <View style={styles.mainContainer}>
          <Button
            testID="choose-file-button"
            style={styles.input}
            mode="contained"
            buttonColor={isDarkMode ? COLORS.lighter : COLORS.background}
            textColor={isDarkMode ? COLORS.darker : COLORS.lighter}
            labelStyle={styles.input}
            onPress={onChoosePress}
...
